--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section>
         <header>
             <div class="menu">
-                <img src="images/menu.png" alt="menu-icon" width="80px">
+                <img src="images/menu.png" alt="menu-icon" width="45px">
             </div>
             <img src="images/header.png" alt="header" width="100%">
         </header>
@@ -53,7 +53,7 @@
                 <h2>Specialist Availability</h2>
                 <div class="row hospital">
                     <div class="col-xs-6 logo">
-                        <img src="images/doctor.png" alt="logo" width="70px" height="70px">
+                        <img src="images/doctor.png" alt="logo" width="48px" height="48px">
                     </div>
                     <div class="col-xs-6 info">
                         <div class="title">Dr Hassan Ssemambo</div>
@@ -66,22 +66,22 @@
                 </div>
                 <div class="row hospital">
                     <div class="col-xs-6 logo">
-                        <img src="images/doctor.png" alt="logo" width="70px" height="70px">
+                        <img src="images/doctor.png" alt="logo" width="48px" height="48px">
                     </div>
                     <div class="col-xs-6 info">
                         <div class="title"> Dr Kabugo Timothy</div>
-                        <div class="location">Pretoria Referral Hospital</div>
+                        <div class="location">Pretoria Referal Hospital</div>
                         <div class="consult">0500-2300 hours</div>
                     </div>
                 </div>
 
                 <div class="row hospital">
                     <div class="col-xs-6 logo">
-                        <img src="images/doctor.png" alt="logo" width="70px" height="70px">
+                        <img src="images/doctor.png" alt="logo" width="48px" height="48px">
                     </div>
                     <div class="col-xs-6 info">
                         <div class="title"> Dr Nantongo Josephine</div>
-                        <div class="location">Midrand Main Hospital</div>
+                        <div class="location">Midrand Referal Hospital</div>
                         <div class="consult">0500-2300 hours</div>
                     </div>
                 </div>
