--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8">
     <title>Ultrasound&AugmentedReality</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
         integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -21,29 +21,29 @@
 
         <main>
             <div class="row">
-                <div class="col-xs-4">
+                <div class="col-lg-4">
                     <img class="button" src="images/account.jpg" alt="account">
                     Account
                 </div>
-                <div class="col-xs-4">
+                <div class="col-lg-4">
                     <img class="button" src="images/classification.jpeg" alt="classification">
                     Classification
                 </div>
-                <div class="col-xs-4">
+                <div class="col-lg-4">
                     <img class="button" src="images/segmentation.jpeg">
                     Segmentation
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-4">
+                <div class="col-lg-4">
                     <img class="button" src="images/3D.png" alt="3D">
                     3D Imaging
                 </div>
-                <div class="col-xs-4">
+                <div class="col-lg-4">
                     <img class="button" src="images/info.jpeg" alt="info">
                     Information
                 </div>
-                <div class="col-xs-4">
+                <div class="col-lg-4">
                     <img class="button" src="images/augmented.jpg" alt="augmented">
                     Augmented Reality
                 </div>
@@ -52,10 +52,10 @@
             <div class="hospitals">
                 <h2>Specialist Availability</h2>
                 <div class="row hospital">
-                    <div class="col-xs-6 logo">
-                        <img src="images/doctor.png" alt="logo" width="48px" height="48px">
+                    <div class="col-lg-6 logo">
+                        <img src="images/doctor.png" alt="logo" width="96px" height="96px">
                     </div>
-                    <div class="col-xs-6 info">
+                    <div class="col-lg-6 info">
                         <div class="title">Dr Hassan Ssemambo</div>
                         
                         <div class="location">Soweto Municipal Hospital</div>
@@ -65,10 +65,10 @@
                     </div>
                 </div>
                 <div class="row hospital">
-                    <div class="col-xs-6 logo">
-                        <img src="images/doctor.png" alt="logo" width="48px" height="48px">
+                    <div class="col-lg-6 logo">
+                        <img src="images/doctor.png" alt="logo" width="96px" height="96px">
                     </div>
-                    <div class="col-xs-6 info">
+                    <div class="col-lg-6 info">
                         <div class="title"> Dr Kabugo Timothy</div>
                         <div class="location">Pretoria Referal Hospital</div>
                         <div class="consult">0500-2300 hours</div>
@@ -76,10 +76,10 @@
                 </div>
 
                 <div class="row hospital">
-                    <div class="col-xs-6 logo">
-                        <img src="images/doctor.png" alt="logo" width="48px" height="48px">
+                    <div class="col-lg-6 logo">
+                        <img src="images/doctor.png" alt="logo" width="96px" height="96px">
                     </div>
-                    <div class="col-xs-6 info">
+                    <div class="col-lg-6 info">
                         <div class="title"> Dr Nantongo Josephine</div>
                         <div class="location">Midrand Referal Hospital</div>
                         <div class="consult">0500-2300 hours</div>
