--- a/index.html
+++ b/index.html
@@ -21,29 +21,31 @@
 
         <main>
             <div class="row">
-                <div class="col-lg-4">
+                <div class="col-sm-6 col-md-3">
                     <img class="button" src="images/account.jpg" alt="account">
                     <p>Account</p>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-sm-6 col-md-3">
                     <img class="button" src="images/classification.jpeg" alt="classification">
                     <p>Classification</p>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-sm-6 col-md-3">
                     <img class="button" src="images/segmentation.jpeg">
                     <p>Segmentation</p>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4">
+
+                <div class="col-sm-6 col-md-3">
                     <img class="button" src="images/3D.png" alt="3D">
                     <p>3D Imaging</p>
                 </div>
-                <div class="col-lg-4">
+            </div>
+            <div class="row">
+
+                <div class="col-sm-6">
                     <img class="button" src="images/info.jpeg" alt="info">
                     <p>Information</p>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-sm-6">
                     <img class="button" src="images/augmented.jpg" alt="augmented">
                     <p>Augmented Reality</p>
                 </div>
@@ -52,10 +54,10 @@
             <div class="hospitals">
                 <h2>Specialist Availability</h2>
                 <div class="row hospital">
-                    <div class="col-lg-6 logo">
+                    <div class="col-md-6 logo">
                         <img src="images/doctor.png" alt="logo" width="96px" height="96px">
                     </div>
-                    <div class="col-lg-6 info">
+                    <div class="col-md-6 info">
                         <div class="title">Dr Hassan Ssemambo</div>
 
                         <div class="location">Soweto Municipal Hospital</div>
@@ -65,10 +67,10 @@
                     </div>
                 </div>
                 <div class="row hospital">
-                    <div class="col-lg-6 logo">
+                    <div class="col-md-6 logo">
                         <img src="images/doctor.png" alt="logo" width="96px" height="96px">
                     </div>
-                    <div class="col-lg-6 info">
+                    <div class="col-md-6 info">
                         <div class="title"> Dr Kabugo Timothy</div>
                         <div class="location">Pretoria Referal Hospital</div>
                         <div class="consult">0500-2300 hours</div>
@@ -76,10 +78,10 @@
                 </div>
 
                 <div class="row hospital">
-                    <div class="col-lg-6 logo">
+                    <div class="col-md-6 logo">
                         <img src="images/doctor.png" alt="logo" width="96px" height="96px">
                     </div>
-                    <div class="col-lg-6 info">
+                    <div class="col-md-6 info">
                         <div class="title"> Dr Nantongo Josephine</div>
                         <div class="location">Midrand Referal Hospital</div>
                         <div class="consult">0500-2300 hours</div>
