--- a/index.html
+++ b/index.html
@@ -21,31 +21,31 @@
 
         <main>
             <div class="row">
-                <div class="col-sm-6 col-md-3">
+                <div class="col-xs-6 col-md-3">
                     <img class="button" src="images/account.jpg" alt="account">
                     <p>Account</p>
                 </div>
-                <div class="col-sm-6 col-md-3">
+                <div class="col-xs-6 col-md-3">
                     <img class="button" src="images/classification.jpeg" alt="classification">
                     <p>Classification</p>
                 </div>
-                <div class="col-sm-6 col-md-3">
+                <div class="col-xs-6 col-md-3">
                     <img class="button" src="images/segmentation.jpeg">
                     <p>Segmentation</p>
                 </div>
 
-                <div class="col-sm-6 col-md-3">
+                <div class="col-xs-6 col-md-3">
                     <img class="button" src="images/3D.png" alt="3D">
                     <p>3D Imaging</p>
                 </div>
             </div>
             <div class="row">
 
-                <div class="col-sm-6">
+                <div class="col-xs-6">
                     <img class="button" src="images/info.jpeg" alt="info">
                     <p>Information</p>
                 </div>
-                <div class="col-sm-6">
+                <div class="col-xs-6">
                     <img class="button" src="images/augmented.jpg" alt="augmented">
                     <p>Augmented Reality</p>
                 </div>
