--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="menu">
                 <img src="images/menu.png" alt="menu-icon" width="45px">
             </div>
-            <img src="images/header.png" alt="header" width="100%">
+            <img class="banner" src="images/header.png" alt="header" width="100%">
         </header>
 
         <main>
