--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Ultrasound&AugmentedReality</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
         integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+    <script nomodule src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js"></script>
     <link rel="stylesheet" href="style.css">
     <script src="//unpkg.com/alpinejs" defer></script>
 
@@ -33,7 +36,7 @@
                     <button type="submit" class="forgot" text-align="center">Forgot Password?</button>
                 </form>
             </div>
-          
+
         </div>
         </div>
     </section>
@@ -42,7 +45,15 @@
     <section x-show="login&&homePage">
         <header>
             <div class="menu">
-                <img src="images/menu.png" alt="menu-icon" width="45px">
+                <button @click="toggle = !toggle"><img src="images/menu.png" alt="menu-icon" width="45px"></button>
+            </div>
+            <div x-show="toggle" class="toggle">
+                <button @click="">
+                    Camera
+                </button>
+                <button class="logout" @click="LoggingOut">
+                    logout
+                </button>
             </div>
             <img class="banner" src="images/header.png" alt="header" width="100%">
         </header>
@@ -150,15 +161,24 @@
     </section>
 
     <!-- section for image segmentation-->
-    <section x-show="login&&segmentation">
+    <section class="segmentation" x-show="login&&segmentation">
         <h2>Segmentation</h2>
+
         <button type="submit" @click="openHome('segmentation')">Home</button>
     </section>
 
     <!-- section for 3D Imaging-->
-    <section x-show="login&&image3D">
-        <h2>3D Imaging</h2>
-        <button type="submit" @click="openHome('image3D')">Home</button>
+    <section class="imaging" x-show="login&&image3D">
+        <div>
+            <button class="home" type="submit" @click="openHome('image3D')">Home</button>
+            <span class="title">3D IMAGING</span>
+        </div>
+        <div id="aSide">
+            <model-viewer src="models/scene.gltf" alt="Lung Cancer model" auto-rotate camera-controls ar
+                ios-src="models/scene.gltf">
+            </model-viewer>
+        </div>
+
     </section>
 
     <!-- section for Information-->
